Attempt to resolve all blocker violoations since 2.0.3
Update issue 908